objects/SKU_Builder_Alts__c.object
<CustomObject>
    <fields>
        <fullName>ALT_QPU__c</fullName>
        <label>ALT QPU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALT_SKU__c</fullName>
        <label>ALT SKU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALT_UOM__c</fullName>
        <label>ALT UOM</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Type__c</fullName>
        <label>Alt Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPU__c</fullName>
        <label>QPU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Number__c</fullName>
        <externalId>true</externalId>
        <label>Unique Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SKU Builder Alt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SKU Builder Alts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKU Buider Alts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>